# BehaveAI

./: .gitignore  BehaveAI.py  BehaveAI_annotation.py  BehaveAI_classify_track.py  BehaveAI_inspect_dataset.py  BehaveAI_live.py  BehaveAI_settings_gui.py  README.md  app.py  index_annotations.py  install.ps1  install.sh  load_configs.py  pyproject.toml  requirements.txt  splice.py
scripts/: annotation.py  classify_track.py  fishial_inference.py  inspect_dataset.py  load_configs.py  pseudolabeller.py  regenerate_annotations.py  settings_gui.py  splice.py
